--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>TGX</title>
-<link rel="shortcut icon" href="https://Small-cart.github.io/favicon.ico?v=1728226732696">
+<link rel="shortcut icon" href="https://Small-cart.github.io/favicon.ico">
 <link href="https://cdn.jsdelivr.net/npm/remixicon@2.3.0/fonts/remixicon.css" rel="stylesheet">
 <link rel="stylesheet" href="https://Small-cart.github.io/styles/main.css">
 <link rel="alternate" type="application/atom+xml" title="TGX - Atom Feed" href="https://Small-cart.github.io/atom.xml">
